lintian (2.4.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - build-depends-on-specific-java-doc-package

  * checks/binaries:
    + [RA] Exclude kfreebsd-kernel-di-{amd64,i386} from the
      embedded-zlib check since it's in the kernel.  (Closes: #593397)
    + [RG] Add swipl to the list of known interpreters.  (Closes: #591316)
  * checks/debian-source-dir:
    + [NT] Added missing import of "Util" perl module.  Thanks to David
      Bremner for the patch.
  * checks/fields{,.desc}:
    + [NT] Added check for packages build depending on openjdk-X-doc or
      classpath-doc instead of the default-jdk-doc metapackage.
      (Closes: #593837)
  * checks/files:
    + [NT] Fixed false-positive extra-license-file for license.ui files.
      Thanks to Jeremy Sanders for the report.  (Closes: #595941)
  * checks/menu-format.desc:
    + [CW] Fix several typos.
  * checks/menus.desc:
    + [RA] Rephrase doc-base-uses-applications-section to be clearer that
      its advice is to remove the "Applications/" part of the section.
  * checks/nmu:
    + [RG] Completely abort if debian/changelog is a symlink.
      (Closes: #582408)
  * checks/standards-version:
    + [RG] Correctly handle cases where debian/changelog is a symlink.

  * data/changelog-file/ubuntu-dists:
    + [CW] Add natty as a valid Ubuntu distribution, and remove the EOLed
      intrepid and jaunty.
  * data/fields/essential:
    + [RG] Add hurd.  (Closes: #591323)

  * debian/control:
    + [RA] Add the build dependencies required to run the test suite
      during the build.  Many thanks to Niels Thykier for the investigative
      work to determine which packages are required.  (Closes: #593832)
    + [RA] Remove versions from dependencies when those versions are
      satisifed by stable (lenny).
    + [NT] Bump debhelper build dependency to 7.0.50~, since some tests
      depend on using dh7 with override targets.  (Closes: #607730)
    + [NT] Added Niels Thykier to uploaders.