@@ -5,9 +5,13 @@ Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: debhelper (>= 7.0.50~), openjdk-6-doc
 
-Package: lib{$srcpkg}-java
+Package: lib{$srcpkg}-java-doc
 Architecture: {$architecture}
+Section: doc
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Recommends: openjdk-6-doc
+# Negative testing as well, this should not be triggered.
+Replaces: openjdk-6-doc
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
