@@ -4,3 +4,4 @@ Version: 1.0
 Description: General tests for java package (build) dependencies
 Test-For:
  build-depends-on-specific-java-doc-package
+ depends-on-specific-java-doc-package
